# clustermanagementtool

backend/: Cargo.toml  Railway.toml
backend/frontend/: cluster.js  index.html  styles.css
backend/src/: handlers.rs  main.rs
frontend/: cluster.js  index.html  styles.css
