[package]
name = "cluster_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
# Use tower-http v0.3 for the 'serve-dir' feature
tower-http = { version = "0.3", features = ["fs"] }
